# nonebot-plugin-setu

./: LICENSE  README.md  __init__.py  config.py  pyproject.toml  requirements.txt  setu.py
APIS/: lolicon.py  pixiv.py  yuban.py
